🚀 Add Vercel deployment configuration
✅ DEPLOYMENT SETUP:
- Added vercel.json for monorepo deployment
- Added .vercelignore to exclude unnecessary files
- Added build.sh script for monorepo builds
- Added build:packages script to package.json
- Created comprehensive DEPLOYMENT.md guide

🎯 VERCEL INSTRUCTIONS:
- Method 1: Deploy apps/web directly (recommended)
- Method 2: Use monorepo configuration with vercel.json
- Set environment variables in Vercel dashboard
- Use build command: npm run build:packages && cd apps/web && npm run build

📋 TODO:
- Import GitHub repo in Vercel
- Set Root Directory to 'apps/web'
- Add NEXT_PUBLIC_ETHERSCAN_API_KEY environment variable
- Deploy and test

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "build": "turbo run build",
+    "build:packages": "cd packages/core && npm run build && cd ../proofs && npm run build && cd ../ai && npm run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "test": "turbo run test",
